# file_system_simulation

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_run.sh  memcheck.sh
src/: CMakeLists.txt  fd_table.h  file_table.h  main.c  merofs.h  path_indexer.c  path_indexer.h  ramdisk.c  ramdisk.h  syscalls.h  types.h
src/debug/: debug_log.c  debug_log.h  options.h
src/minixfs/: notes.txt
src/mxfs/: bitmap.c  bitmap.h  block_bitmap.c  block_bitmap.h  block_zone.c  block_zone.h  inode_bitmap.c  inode_bitmap.h  inode_zone.c  inode_zone.h  mxfs.c  mxfs.h  notes.txt  types.h
